lne2/gitops/clusters/aks-centralindia/apps/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: voting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: ${ACR_LOGIN_SERVER}/worker:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
